# agent-eval-harness-testing

./: .gitignore  CHANGELOG.md  DOCS.md  META_EVALUATOR.md  MIGRATION_SUMMARY.md  PROVIDER_COMPARISON.md  QUICKSTART.md  README.md  SETUP.md  VERTEX_AI_INTEGRATION.md  VERTEX_AI_SETUP.md  config.vertex.yaml  config.yaml  pyproject.toml  test_corporate_endpoint.py
src/meta_evaluator/: cli.py  config.py
src/meta_evaluator/dataset/: loader.py  sampler.py
src/meta_evaluator/judge/: client.py  prompts.py  verdict.py
src/meta_evaluator/scoring/: metrics.py  reporter.py
tests/: conftest.py  test_loader.py  test_metrics.py  test_sampler.py
