[project]
name = "owasp-meta-evaluator"
version = "0.1.0"
description = "Meta-evaluator for testing LLM security judges using OWASP Benchmark"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "openai>=1.30.0",
    "google-cloud-aiplatform>=1.62.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "tabulate>=0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
meta-eval = "meta_evaluator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
